--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,40 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-23 07:06:22 -0400 
+%% Created for Pete Su at 2023-08-23 07:16:19 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Reznik_2003,
+	author = {Benni Reznik},
+	date-added = {2023-08-23 07:15:54 -0400},
+	date-modified = {2023-08-23 07:16:19 -0400},
+	doi = {10.1023/a:1022875910744},
+	journal = {Foundations of Physics},
+	note = {\href{http://arxiv.org/abs/quant-ph/0212044v2}{arxiv:quant-ph/0212044v2}},
+	number = {1},
+	pages = {167--176},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {{Entanglement from the Vacuum}},
+	url = {https://doi.org/10.1023%2Fa%3A1022875910744},
+	volume = {33},
+	year = 2003,
+	bdsk-url-1 = {https://doi.org/10.1023%2Fa%3A1022875910744},
+	bdsk-url-2 = {https://doi.org/10.1023/a:1022875910744}}
+
+@article{Reznik2000,
+	archiveprefix = {arXiv},
+	author = {Reznik, Benni},
+	date-added = {2023-08-23 07:14:20 -0400},
+	date-modified = {2023-08-23 07:15:01 -0400},
+	eprint = {quant-ph/0008006},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/quant-ph/0008006}{arxiv:quant-ph/0008006}},
+	title = {{Distillation of vacuum entanglement to EPR pairs}},
+	year = {2000}}
 
 @inproceedings{Renyi1961,
 	author = {R{\'e}nyi, Alfr{\'e}d},
@@ -9816,11 +9844,11 @@ horizon.},
 	year = {2010},
 	bdsk-url-1 = {https://books.google.com/books?id=ZOfUsvemJDMC}}
 
-@article{Richter2014pga,
+@article{Richter2014,
 	archiveprefix = {arXiv},
 	author = {Richter, Burton},
 	date-added = {2019-02-21 18:29:27 +0000},
-	date-modified = {2023-07-18 12:31:18 -0400},
+	date-modified = {2023-08-23 07:15:13 -0400},
 	doi = {10.1142/9789814651493_0001, 10.1142/S1793626814300011},
 	eprint = {1409.1196},
 	journal = {Rev. Accel. Sci. Tech.},
