--- a/1108.0320/unruhmirrorrevised3.tex
+++ b/1108.0320/unruhmirrorrevised3.tex
@@ -1,4 +1,4 @@
-\documentclass[prd,nofootinbib,showpacs,twocolumn]{revtex4-1}
+\documentclass[prd,nofootinbib,showpacs,onecolumn,12pt]{revtex4-1}
 
 \usepackage{amstext,amsmath,amssymb,amsfonts,bbm}
 \usepackage[latin1]{inputenc}
@@ -17,21 +17,48 @@
 
 %\numberwithin{equation}{section}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
-\renewcommand{\baselinestretch}{1.05}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
-
-%\oddsidemargin 2mm
-%\evensidemargin 10mm
-%\textwidth 15.5cm
-\topmargin -1cm
-\textheight 23.5cm
-\footskip 1cm
-\textwidth 17.7cm
-
-
-
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 \def\beq{\begin{equation}}
 \def\be{\begin{equation}}
 \def\ee{\end{equation}}
@@ -128,10 +155,11 @@
 
 
 
-\date{\small\today}
+\date{20 Jun 2012}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{abstract}\noindent
+\begin{abstract}
+\noindent
 We estimate the transition rates of a uniformly accelerated Unruh-DeWitt detector coupled to a quantum field with reflecting conditions on a boundary plane (a ``mirror").  We find that these are essentially indistinguishable from the usual Unruh rates, viz. that the Unruh effect persists in the presence of the mirror.  This shows that the Unruh effect (thermality of detector rates) is not merely a consequence of the entanglement between left and right Rindler quanta in the Minkowski vacuum. Since in this setup the state of the field in the Rindler wedge is pure, we argue furthermore that the relevant entropy in the Unruh effect cannot be the von Neumann entanglement entropy. We suggest, in alternative, that it is the Shannon entropy associated with Heisenberg uncertainty.
 
 \end{abstract} 
