--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-23 07:31:52 -0400 
+%% Created for Pete Su at 2023-08-23 07:37:17 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Schlicht2004,
+	author = {Sebastian Schlicht},
+	date-added = {2023-08-23 07:37:12 -0400},
+	date-modified = {2023-08-23 07:37:16 -0400},
+	doi = {10.1088/0264-9381/21/19/011},
+	journal = {Class. Quantum Grav.},
+	note = {\href{http://arxiv.org/abs/gr-qc/0306022v2}{arxiv:gr-qc/0306022v2}},
+	number = {19},
+	pages = {4647--4660},
+	publisher = {{IOP} Publishing},
+	title = {Considerations on the Unruh effect: causality and regularization},
+	url = {https://doi.org/10.1088%2F0264-9381%2F21%2F19%2F011},
+	volume = {21},
+	year = 2004,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0264-9381%2F21%2F19%2F011},
+	bdsk-url-2 = {https://doi.org/10.1088/0264-9381/21/19/011}}
 
 @article{Rovelli2012,
 	author = {Carlo Rovelli and Matteo Smerlak},
