--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,53 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-23 07:37:17 -0400 
+%% Created for Pete Su at 2023-08-23 09:44:42 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Senovilla2015,
+	author = {Jos{\'{e}} M M Senovilla and David Garfinkle},
+	date-added = {2023-08-23 09:44:38 -0400},
+	date-modified = {2023-08-23 09:44:40 -0400},
+	doi = {10.1088/0264-9381/32/12/124008},
+	journal = {Class. Quantum Grav.},
+	number = {12},
+	pages = {124008},
+	publisher = {{IOP} Publishing},
+	title = {The 1965 Penrose singularity theorem},
+	url = {https://doi.org/10.1088%2F0264-9381%2F32%2F12%2F124008},
+	volume = {32},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0264-9381%2F32%2F12%2F124008},
+	bdsk-url-2 = {https://doi.org/10.1088/0264-9381/32/12/124008}}
+
+@misc{Seahra2006,
+	author = {Sanjeev S. Seahra},
+	date-added = {2023-08-23 09:43:12 -0400},
+	date-modified = {2023-08-23 09:43:44 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://sanjeev.seahra.ca/wp-content/uploads/2022/01/black_holes.pdf}{PDF}},
+	title = {An introduction to black holes},
+	year = {2006}}
+
+@article{Schutzhold2008,
+	author = {Ralf Sch{\"u}tzhold and William G. Unruh},
+	date-added = {2023-08-23 09:41:52 -0400},
+	date-modified = {2023-08-23 09:41:54 -0400},
+	doi = {10.1103/physrevd.78.041504},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/0804.1686v1}{arxiv:0804.1686v1}},
+	number = {4},
+	publisher = {American Physical Society ({APS})},
+	title = {Origin of the particles in black hole evaporation},
+	url = {https://doi.org/10.1103%2Fphysrevd.78.041504},
+	volume = {78},
+	year = 2008,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.78.041504},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.78.041504}}
 
 @article{Schlicht2004,
 	author = {Sebastian Schlicht},
@@ -6050,10 +6091,10 @@
 	title = {Logic and structure},
 	year = {1994}}
 
-@article{seebach1970sheaf,
+@article{Seebach1970,
 	author = {Seebach Jr, J Arthur and Seebach, Linda A and Steen, Lynn A},
 	date-added = {2023-07-20 07:14:06 -0400},
-	date-modified = {2023-07-20 07:14:06 -0400},
+	date-modified = {2023-08-23 09:44:28 -0400},
 	journal = {The American Mathematical Monthly},
 	number = {7},
 	pages = {681--703},
