--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-23 09:44:42 -0400 
+%% Created for Pete Su at 2023-08-23 09:48:57 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hawking2016,
+	author = {Stephen W. Hawking and Malcolm J. Perry and Andrew Strominger},
+	date-added = {2023-08-23 09:48:49 -0400},
+	date-modified = {2023-08-23 09:48:52 -0400},
+	doi = {10.1103/physrevlett.116.231301},
+	journal = {Phys. Rev. Lett.},
+	note = {\href{http://arxiv.org/abs/1601.00921v1}{arxiv:1601.00921v1}},
+	number = {23},
+	publisher = {American Physical Society ({APS})},
+	title = {Soft Hair on Black Holes},
+	url = {https://doi.org/10.1103%2Fphysrevlett.116.231301},
+	volume = {116},
+	year = 2016,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevlett.116.231301},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevlett.116.231301}}
 
 @article{Senovilla2015,
 	author = {Jos{\'{e}} M M Senovilla and David Garfinkle},
