--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-23 09:48:57 -0400 
+%% Created for Pete Su at 2023-08-23 09:52:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Solodukhin2011,
+	author = {Sergey N. Solodukhin},
+	date-added = {2023-08-23 09:52:44 -0400},
+	date-modified = {2023-08-23 09:52:48 -0400},
+	doi = {10.12942/lrr-2011-8},
+	journal = {Living Rev. Relativ.},
+	note = {\href{http://arxiv.org/abs/1104.3712v1}{arxiv:1104.3712v1}},
+	number = {1},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Entanglement Entropy of Black Holes},
+	url = {https://doi.org/10.12942%2Flrr-2011-8},
+	volume = {14},
+	year = 2011,
+	bdsk-url-1 = {https://doi.org/10.12942%2Flrr-2011-8},
+	bdsk-url-2 = {https://doi.org/10.12942/lrr-2011-8}}
 
 @article{Hawking2016,
 	author = {Stephen W. Hawking and Malcolm J. Perry and Andrew Strominger},
