--- a/hep-th-9401072/9401072.tex
+++ b/hep-th-9401072/9401072.tex
@@ -7,7 +7,26 @@
 \documentclass[12pt]{article}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[colorlinks=true
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -15,24 +34,15 @@
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,linktocpage=true]{hyperref}
+,linktocpage=true}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
 
-% these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
-\input{../helpers/fix-underbrace.tex}
-
-\usepackage[small]{titlesec}
-\usepackage{cite}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
@@ -41,7 +51,9 @@ bookmarksopenlevel=10
 %\input{../helpers/fix-revtex-12.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
-%\documentstyle[aps,twocolumn]{revtex}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+
 \begin{document}
 
 \title{On Geometric Entropy}
