--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-23 09:52:50 -0400 
+%% Created for Pete Su at 2023-08-23 15:44:05 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Socolovsky2013,
+	author = {M. Socolovsky},
+	date-added = {2023-08-23 15:42:13 -0400},
+	date-modified = {2023-08-23 15:43:56 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/1304.2833}{arxiv:1304.2833}},
+	title = {Rindler Space and Unruh Effect},
+	year = {2013}}
 
 @article{Solodukhin2011,
 	author = {Sergey N. Solodukhin},
