--- a/1706.07143/1706.07143.tex
+++ b/1706.07143/1706.07143.tex
@@ -10,24 +10,53 @@
 %\usepackage[textheight=9in, textwidth=6.5in, letterpaper]{geometry}
 %\textheight 9in \textwidth 6.5in \oddsidemargin 0in \topmargin -.35in
 
-\usepackage[colorlinks=true
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,linktocpage=true]{hyperref}
+,linktocpage=true}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-\usepackage[letterpaper, margin=1.4in]{geometry}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 
 \def\half{{1\over 2}}
@@ -93,15 +122,7 @@ bookmarksopenlevel=10
   \let\over=\@@over \let\overwithdelims=\@@overwithdelims
   \let\atop=\@@atop \let\atopwithdelims=\@@atopwithdelims
   \let\above=\@@above \let\abovewithdelims=\@@abovewithdelims
-\renewcommand\section{\@startsection {section}{1}{\z@}%
-                                   {-3.5ex \@plus -1ex \@minus -.2ex}%nn
-                                   {2.3ex \@plus.2ex}%
-                                   {\normalfont\large\bfseries}}
 
-\renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
-                                     {-3.25ex\@plus -1ex \@minus -.2ex}%
-                                     {1.5ex \@plus .2ex}%
-                                     {\normalfont\bfseries}}
 
 
 \newcommand{\Tr}{\mbox{Tr}}
@@ -169,7 +190,8 @@ We argue that four-dimensional  black hole evaporation inevitably produces an in
 %\setcounter{page}{1}
 \pagenumbering{arabic}
 
-\tableofcontents
+\newpage
+
 \section{Introduction}
 According to Hawking \cite{Hawking:1974sw}, quantum black holes emit a nearly thermal spectrum of radiation. This Hawking radiation is `hard' in the sense that the emission probability vanishes as the energy $ \omega \to 0$. From a variety of viewpoints it is known that such a process is impossible in 4D: hard radiated quanta are always accompanied by an infinite cloud of tightly correlated soft quanta. In this note we conjecture that the full evaporation process is unitary, but that the inclusive cross section 
 traced over all final soft quanta reproduces the Hawking result at leading order. This proposed unitarity restoration process is an alternative to that of Page \cite{Page:1979tc} in which quantum purity  is restored by correlations between early and late time hard Hawking quanta. We then show that, for the the special case of pure 4D gravity, supertranslation and superrotation conservations laws do imply that tracing over the outgoing soft quanta fully decoheres  the  hard emissions.  Similar conclusions were independently reached in the very recent work of 
