--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,60 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-24 15:10:06 -0400 
+%% Created for Pete Su at 2023-08-24 16:13:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Teitelboim1983,
+	author = {Teitelboim, Claudio},
+	date-added = {2023-08-24 16:12:57 -0400},
+	date-modified = {2023-08-24 16:12:58 -0400},
+	journal = {Physics Letters B},
+	number = {1-2},
+	pages = {41--45},
+	publisher = {Elsevier},
+	title = {Gravitation and hamiltonian structure in two spacetime dimensions},
+	volume = {126},
+	year = {1983}}
+
+@article{Takagi1986,
+	author = {Takagi, Shin},
+	date-added = {2023-08-24 16:12:36 -0400},
+	date-modified = {2023-08-24 16:12:38 -0400},
+	journal = {Progress of Theoretical Physics Supplement},
+	pages = {1--142},
+	publisher = {Oxford Academic},
+	title = {Vacuum noise and stress induced by uniform accelerationhawking-unruh effect in rindler manifold of arbitrary dimension},
+	volume = {88},
+	year = {1986}}
+
+@article{Susskind1994,
+	author = {Leonard Susskind and L{\'{a}}rus Thorlacius},
+	date-added = {2023-08-24 16:12:04 -0400},
+	date-modified = {2023-08-24 16:12:07 -0400},
+	doi = {10.1103/physrevd.49.966},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/hep-th/9308100v1}{arxiv:hep-th/9308100v1}},
+	number = {2},
+	pages = {966--974},
+	publisher = {American Physical Society ({APS})},
+	title = {Gedanken experiments involving black holes},
+	url = {https://doi.org/10.1103%2Fphysrevd.49.966},
+	volume = {49},
+	year = 1994,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.49.966},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.49.966}}
+
+@book{Susskind2004,
+	author = {Susskind, Leonard and Lindesay, James},
+	date-added = {2023-08-24 16:09:41 -0400},
+	date-modified = {2023-08-24 16:10:30 -0400},
+	publisher = {World Scientific},
+	title = {An Introduction To Black Holes, Information And The String Theory Revolution: The Holographic Universe},
+	year = {2004}}
 
 @article{Susskind2016b,
 	author = {Leonard Susskind},
