--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,37 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-24 16:13:00 -0400 
+%% Created for Pete Su at 2023-08-24 19:36:56 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{Thiffeault1993,
+	author = {Thiffeault, Jean-Luc and Purcell, Mick and Correll, Randy},
+	date-added = {2023-08-24 19:35:45 -0400},
+	date-modified = {2023-08-24 19:36:56 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://people.math.wisc.edu/~thiffeault/talks/rindler.pdf}{PDF}},
+	title = {What a Rindler Observer Sees in a Minkowski Vacuum},
+	year = {1993}}
+
+@article{Terashima2000,
+	author = {Hiroaki Terashima},
+	date-added = {2023-08-24 19:35:11 -0400},
+	date-modified = {2023-08-24 19:35:13 -0400},
+	doi = {10.1103/physrevd.61.104016},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/gr-qc/9911091v2}{arxiv:gr-qc/9911091v2}},
+	number = {10},
+	publisher = {American Physical Society ({APS})},
+	title = {Entanglement entropy of the black hole horizon},
+	url = {https://doi.org/10.1103%2Fphysrevd.61.104016},
+	volume = {61},
+	year = 2000,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.61.104016},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.61.104016}}
 
 @article{Teitelboim1983,
 	author = {Teitelboim, Claudio},
