--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,56 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-24 19:36:56 -0400 
+%% Created for Pete Su at 2023-08-24 20:10:33 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Wadler1992a,
+	author = {Philip Wadler},
+	date-added = {2023-08-24 20:10:23 -0400},
+	date-modified = {2023-08-24 20:10:25 -0400},
+	doi = {10.1017/s0960129500001560},
+	journal = {Math. Struct. Comp. Sci.},
+	number = {4},
+	pages = {461--493},
+	publisher = {Cambridge University Press ({CUP})},
+	title = {Comprehending monads},
+	url = {https://doi.org/10.1017%2Fs0960129500001560},
+	volume = {2},
+	year = 1992,
+	bdsk-url-1 = {https://doi.org/10.1017%2Fs0960129500001560},
+	bdsk-url-2 = {https://doi.org/10.1017/s0960129500001560}}
+
+@inproceedings{Wadler1990,
+	author = {Wadler, Philip},
+	booktitle = {Proceedings of the 1990 ACM Conference on LISP and Functional Programming},
+	date-added = {2023-08-24 20:09:34 -0400},
+	date-modified = {2023-08-24 20:09:35 -0400},
+	pages = {61--78},
+	title = {Comprehending monads},
+	year = {1990}}
+
+@inproceedings{Wadler1995,
+	author = {Wadler, Philip},
+	booktitle = {Advanced Functional Programming: First International Spring School on Advanced Functional Programming Techniques B{\aa}stad, Sweden, May 24--30, 1995 Tutorial Text 1},
+	date-added = {2023-08-24 20:07:40 -0400},
+	date-modified = {2023-08-24 20:07:42 -0400},
+	organization = {Springer},
+	pages = {24--52},
+	title = {Monads for functional programming},
+	year = {1995}}
+
+@inproceedings{Wadler1992,
+	author = {Wadler, Philip},
+	booktitle = {Proceedings of the 19th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+	date-added = {2023-08-24 19:53:06 -0400},
+	date-modified = {2023-08-24 19:53:09 -0400},
+	pages = {1--14},
+	title = {The essence of functional programming},
+	year = {1992}}
 
 @misc{Thiffeault1993,
 	author = {Thiffeault, Jean-Luc and Purcell, Mick and Correll, Randy},
