--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-24 20:28:29 -0400 
+%% Created for Pete Su at 2023-08-24 20:32:37 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Larjo2013,
+	author = {Klaus Larjo and David A. Lowe and Larus Thorlacius},
+	date-added = {2023-08-24 20:32:32 -0400},
+	date-modified = {2023-08-24 20:32:35 -0400},
+	doi = {10.1103/physrevd.87.104018},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1211.4620v3}{arxiv:1211.4620v3}},
+	number = {10},
+	publisher = {American Physical Society ({APS})},
+	title = {Black holes without firewalls},
+	url = {https://doi.org/10.1103%2Fphysrevd.87.104018},
+	volume = {87},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.87.104018},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.87.104018}}
 
 @article{Wadler1992a,
 	author = {Philip Wadler},
