--- a/1211.4620/firewall_v15.tex
+++ b/1211.4620/firewall_v15.tex
@@ -329,7 +329,7 @@ leading to a possible problem: since these Hawking particles can be
 entangled with the diary before the black hole scrambles, there may
 be a modification of the high frequency quanta, and hence an infalling
 observer may see a firewall. On the other hand, as argued in \cite{Hayden:2007cs},
-if the entanglement only appears after $t_{\it scramble}$ one finds compatibility
+if the entanglement only appears after $t_{\mathrm{scramble}}$ one finds compatibility
 with the postulates of black hole complementarity.
 
 One can use information theory arguments to place a lower bound on
@@ -337,7 +337,7 @@ the time scale of information retrieval. This is computed in \cite{Hayden:2007cs
 in eqn (1). They find the probability for failure to decode a $k$-bit
 message in the diary satisfies
 \begin{equation}
-P_{\it fail}\leq2^{k}2^{-s}\label{eq:pfail-1}
+P_{\mathrm {fail}}\leq2^{k}2^{-s}\label{eq:pfail-1}
 \end{equation}
 where $s$ is the number of bits that Bob reads after the diary is
 thrown in. Now this seems to imply the information comes out faster
@@ -393,7 +393,7 @@ of $\rho_{\it BhA}$ correspond to states involving $|-\rangle_{A}$,
 over which Alice's diary does not have support yet. This is to be
 compared with the maximally entangled $2^{k}N\times2^{k}N$ matrix
 \begin{equation}
-\rho_{\it max}=\frac{1}{2^{k}N}\left(\begin{array}{cccc}
+\rho_{\mathrm{max}}=\frac{1}{2^{k}N}\left(\begin{array}{cccc}
 \mathbb{I}_{N} & 0 & \cdots & 0\\
 0 & \mathbb{I}_{N} & \cdots & 0\\
 \vdots & \vdots & \ddots & 0\\
@@ -416,7 +416,7 @@ emitted from the stretched horizon is an operator close to the identity
 operator in the $2^{k}N\times2^{k}N$ dimensional Hilbert space, acting
 on all the stretched horizon states with approximately equal weight
 \[
-\mathcal{O}_{long}=\mathbb{I}{}_{2^{k}N}+\epsilon
+\mathcal{O}_{\mathrm{long}}=\mathbb{I}{}_{2^{k}N}+\epsilon
 \]
 where $\epsilon$ is some small perturbation with vanishing trace.
 We see in each case \eqref{eq:minentang} and \eqref{eq:maxentang}
@@ -430,7 +430,7 @@ thermal, regardless of the stretched horizon state.
 On the other hand, a model for the emission of a short transverse
 wavelength mode would be to pick an operator such as
 \begin{equation}
-\mathcal{O}_{\it short}=\left(\begin{array}{cccc}
+\mathcal{O}_{\mathrm{short}}=\left(\begin{array}{cccc}
 \mathbb{I}_{N} & 0 & \cdots & 0\\
 0 & 0 & \cdots & 0\\
 \vdots & \vdots & \ddots & 0\\
@@ -440,17 +440,17 @@ wavelength mode would be to pick an operator such as
 In this case, immediately after the diary was thrown in, we would
 find 
 \begin{eqnarray*}
-\mathrm{Tr}\rho_{\it BhA}\times\mathcal{O}_{\it short} & = & 1\\
-\mathrm{Tr}\rho_{\it max}\times\mathcal{O}_{\it short} & = & 1/2^{k}
+\mathrm{Tr}\rho_{\it BhA}\times\mathcal{O}_{\mathrm{short}} & = & 1\\
+\mathrm{Tr}\rho_{\mathrm{max}}\times\mathcal{O}_{\mathrm{short}} & = & 1/2^{k}
 \end{eqnarray*}
 so we see the answer is highly sensitive to the state of the stretched
-horizon. The danger is that operators of the form \foreignlanguage{english}{$\mathcal{O}_{\it short}$}
+horizon. The danger is that operators of the form \foreignlanguage{english}{$\mathcal{O}_{\mathrm{short}}$}
 will lead to strong modification of the high-frequency near-horizon
 Hawking modes, giving rise to a firewall. For this to happen, the
 short transverse wavelength modes coupling to such operators would
 have to themselves scramble and become entangled with the early Hawking
 radiation on a timescale that is short compared to the black hole
-scrambling time $t_{\it scramble}$. If, however, the stretched horizon
+scrambling time $t_{\mathrm{scramble}}$. If, however, the stretched horizon
 dynamics is causal, then short transverse wavelength modes are unable
 to scramble (i.e. achieve approximate global thermalization with respect
 to the measure described in \cite{Hayden:2007cs}) in a time $M\log M$.
@@ -480,7 +480,7 @@ modes scramble. This distinguishes the dynamics of the stretched horizon
 from, for instance, an accelerating mirror which would indeed look
 like a firewall from the point of view of a freely falling observer.
 The dynamics of the stretched horizon must be such that the reflection
-coefficient vanishes, the information is retained for a time $t_{\it scramble}$,
+coefficient vanishes, the information is retained for a time $t_{\mathrm{scramble}}$,
 at which point it is then primarily emitted in long transverse wavelength
 modes.
 
@@ -488,12 +488,12 @@ It is important in the argument of \cite{Hayden:2007cs} that the
 diary be much smaller than the black hole. This can also be seen from
 the following estimate of the maximum number of degrees of freedom
 that can scramble fast enough. We ask that a causal signal from a
-cell of size $\lambda_{min}$ on the stretched horizon overlaps with
-a neighboring cell after $t_{\it scramble}$$ $ and assume that this
+cell of size $\lambda_{\mathrm{min}}$ on the stretched horizon overlaps with
+a neighboring cell after $t_{\mathrm{scramble}}$$ $ and assume that this
 is sufficient for scrambling, with respect to the measure of \cite{Hayden:2007cs},
 to take place. This is rather strong assumption about the efficiency
 of the scrambling dynamics so the resulting number of fast scramblers
-is likely to be an overestimate. The above condition implies $\lambda_{min}\sim\log M$,
+is likely to be an overestimate. The above condition implies $\lambda_{\mathrm{min}}\sim\log M$,
 in which case the number of independent fast scrambling degrees of
 freedom is of order $\left(M/\log M\right)^{2}$. Sending in a larger
 diary than this will compromise the rapid rate of information retrieval,
@@ -736,7 +736,7 @@ which is satisfied.
 
 It should be noted that the reduced density matrix
 \[
-\rho_{AB}=\mathrm{Tr_{CD}}\,\rho_{ABCD}
+\rho_{AB}={\mathrm{Tr}_{CD}}\,\rho_{ABCD}
 \]
 is independent of unitary transformations that act within the $C\times D$
 subspace. Therefore the only way to accomplish such a change of entanglement
