--- a/hep-th-9401072/9401072.tex
+++ b/hep-th-9401072/9401072.tex
@@ -123,7 +123,7 @@ curvature singularity at the horizon of deficit angle $\delta= 2\pi
 and the geometry is non-singular ({\it i.e.} $\delta$ vanishes)
 only at the Hawking temperature. This is the right physics: a black hole is in
 thermodynamic equilibrium only at a specific temperature. Recasting the
-general expression for entropy (Eq.\ref{therment}) in terms of deficit angle
+general expression for entropy (Eq.~\ref{therment}) in terms of deficit angle
 rather than $\beta$, one obtains
 \begin{equation}
 S_{BH}~=~ (2\pi{d \over d \delta} +1 ) \ln Z |_{\delta=0}~.
@@ -191,12 +191,12 @@ rescalings of $\rho$ and we will, from now on, be rather cavalier about the
 normalization of $\rho$. The identification of $\tr\rho^n$ as the
 partition
 function, $Z_\delta$, on a space of deficit angle $\delta=2\pi(1-n)$ finally
-allows us to rewrite Eq.\ref{replica} as
+allows us to rewrite Eq.~\ref{replica} as
 \begin{equation}
 S_{\rm geom}~=~(2\pi{d\over d\delta} +1) \ln Z_\delta |_{\delta=0}~.
 \label{reptodef}
 \end{equation}
-But this is formally the same as the expression Eq.\ref{blackent} for the black
+But this is formally the same as the expression Eq.~\ref{blackent} for the black
 hole thermodynamic entropy! To be more precise:  the Bekenstein-Hawking
 entropy and the geometrical entropy are the classical and first
 quantum contributions to a unified object measuring the response of the
@@ -251,7 +251,7 @@ By and large, we will be rederiving old (if not widely known) results
 the workings of the replica method -- and a verification, in our
 context, of its validity.
 
-In Eq.\ref{wavefn} we wrote the ground state wave functional as a Gaussian
+In Eq.~\ref{wavefn} we wrote the ground state wave functional as a Gaussian
 functional integral, subject to boundary conditions at
 $\tau=0$. Doing the integral by Green's function methods gives the result
 \begin{equation}
@@ -279,7 +279,7 @@ in an obvious compressed notation, rewrite the ground state wave function as
 \end{equation}
 where $\gamma_{\pm\pm}$ denotes the kernel with arguments restricted to
 ``inside'' or ``outside'' in various combinations. The integral for the
-ground state density matrix, Eq.\ref{gdstdm}, can be done explicitly giving
+ground state density matrix, Eq.~\ref{gdstdm}, can be done explicitly giving
 \begin{equation}
 \rho(\phi^1_+; \phi^2_+) \propto
 	\exp\{-{1\over 2}(\phi_+^1~ \phi_+^2) 
@@ -300,7 +300,7 @@ B &= -{1\over2} \gamma_{+-} (\gamma_{--})^{-1} \gamma_{-+}\\
 where the inverse kernels are inverses of the restricted kernels, {\it not}
 restrictions of the full $\Gamma^{-1}$.
 
-Using Eq.\ref{gaussdm}, we can write $\tr\rho^n$ as a functional integral:
+Using Eq.~\ref{gaussdm}, we can write $\tr\rho^n$ as a functional integral:
 \begin{equation}
 \tr\rho^n =
 \int [{\cal D} \phi_+] \exp
@@ -322,14 +322,14 @@ B & A & B & \ldots & 0 & 0 \\
 B & 0 & 0 & \ldots & B & A \\
 \end{pmatrix}
 \end{equation}
-and $A$ and $B$ are the kernels defined in Eq.\ref{ABdm}. Doing the Gaussian
+and $A$ and $B$ are the kernels defined in Eq.~\ref{ABdm}. Doing the Gaussian
 functional integral gives the result $\tr\rho^n =1/\sqrt{{\rm det}{\cal
 M}_
  n}$.
 The problem is to compute this functional determinant as an explicit
 function of $n$.
 
-According to the discussion following Eq.\ref{replica}, we can freely rescale
+According to the discussion following Eq.~\ref{replica}, we can freely rescale
 $\rho$ without affecting the value of the entropy. Let us define a new matrix
 \begin{equation}
 \widetilde{\cal M}_n =
@@ -370,7 +370,7 @@ and apply the above reasoning eigenvalue by eigenvalue:
 \end{equation}
 For the usual reasons, we may drop the factors of $2^n(1-\xi^2)^n$ since
 they have no effect on the entropy. The operations called for by the replica
-trick (Eq.\ref{replica}) then give the entropy as
+trick (Eq.~\ref{replica}) then give the entropy as
 a {\it sum} over contributions from each eigenvalue of $C$:
 \begin{equation}
 S_{\rm replica} = -\sum_{C_i}\{\ln(1-\xi(C_i)) +
@@ -384,7 +384,7 @@ The essential point of all this is that the geometric entropy is calculable
 from the spectrum of a kernel $C$, acting on the ``outside'' space. Actually,
 $C$ is constructed out of the standard Green's functions in a very awkward
 way, and it is better to look at the spectrum of a more convenient function of
-$C$. The operator $D$, defined in Eq.\ref{entmat}, and related to $C$ by
+$C$. The operator $D$, defined in Eq.~\ref{entmat}, and related to $C$ by
 $C=(2-D)^{-1}D$, is one possibility. It turns out that the operator
 $E=(1-D)^{-1}D$ is much nicer: it can be expressed as a single convolution
 \begin{equation}
@@ -392,13 +392,13 @@ E \equiv -(\Gamma^{-1})_{+-}~\Gamma_{-+}
 \label{newker}
 \end{equation}
 of the original kernel $\Gamma$,
-defined in Eq.\ref{kernel}, with its inverse (as usual, the subscripts
+defined in Eq.~\ref{kernel}, with its inverse (as usual, the subscripts
 indicate restrictions of the arguments to ``inside'' or ``outside'' values).
 The eigenvalues of $E$ are positive and the relation to $\xi$ is
 \begin{equation}
 \xi(E) = 1+ {2\over E}(1-\sqrt{1+E})~.
 \end{equation}
-The entropy sum, Eq.\ref{eigsum}, can of course be expressed directly in terms
+The entropy sum, Eq.~\ref{eigsum}, can of course be expressed directly in terms
 of the eigenvalues $E$:
 \begin{equation}
 S_{\rm replica} = \sum_{E_i}
@@ -415,12 +415,12 @@ confined to a box $-L<x<L$ to eliminate infrared problems.
 We want to compute the entropy of the ground
 state density matrix obtained by tracing over the fields in $-L<x<0$
 (so that ``inside'' (``outside'') correspond to $x<0$ ($x>0)$).
-We have outlined two methods, Eq.\ref{eigsum} and Eq.\ref{reptodef}, which
+We have outlined two methods, Eq.~\ref{eigsum} and Eq.~\ref{reptodef}, which
 we might call Hamiltonian and Euclidean, respectively. They should agree with
 each other and with conformal field theory, where applicable \cite{Holzhey}.
 
 Let us first take the Hamiltonian approach and try to compute the eigenvalue
-sum in Eq.\ref{eigsum}. The most straightforward approach is to discretize
+sum in Eq.~\ref{eigsum}. The most straightforward approach is to discretize
 the system and then solve the resulting finite-dimensional eigenvalue problem
 numerically. Although this calculation is instructive, and we have done it
 to double-check certain things, it turns out to be hard to extract the
@@ -475,7 +475,7 @@ which diverges logarithmically with the cutoff.
 Note that the density of
 states per unit $\omega$ interval is constant, suggesting that it might
 make more sense to rewrite the continuum limit of the entropy expression,
-Eq.\ref{entsum}, as an integral over $\omega$, expressing the integrand as
+Eq.~\ref{entsum}, as an integral over $\omega$, expressing the integrand as
 a function of $\omega$ rather than $E$. The result of doing this is
 \begin{equation}
 S_{{\rm replica}} = {\ln({L\over\epsilon})\over\pi}\int_0^\infty d\omega
@@ -498,11 +498,11 @@ eigenvalue {\it density} blows up everywhere like $\ln(L/\epsilon)$. This
 is a direct reflection of the Unruh-style log-periodic behavior of the
 eigenvectors.
 
-Some further remarks are in order. The formula in Eq.\ref{rindent} is precisely
+Some further remarks are in order. The formula in Eq.~\ref{rindent} is precisely
 the expression derived by Kabat and Strassler \cite{kabat} for the black hole
 entropy in the large-mass (Rindler space) limit. This is another piece of
 evidence for the identity of geometric and black hole entropy. Also,
-Eq.\ref{rindent} cries out to be generalized to fermions: the corresponding
+Eq.~\ref{rindent} cries out to be generalized to fermions: the corresponding
 formula for the entropy of massless one-dimensional fermions at zero chemical
 potential (to pick out the vacuum state) is obtained by a strategic sign
 change reflecting Fermi-Dirac as opposed to Bose-Einstein statistics:
@@ -522,7 +522,7 @@ calculation
 of the fermionic entropy would be interesting to do.
 
 Next, let us use heat kernel methods to compute the functional determinant
-appearing in the Euclidean expression, Eq.\ref{reptodef}, for the entropy.
+appearing in the Euclidean expression, Eq.~\ref{reptodef}, for the entropy.
 This calculation can easily be done in arbitrary dimension: we study
 a Euclidean field theory on the space $C_\delta\times M_{D-2}$ where
 $C_\delta$ is a two-dimensional cone of radius $L$, deficit angle
@@ -565,7 +565,7 @@ $C_\delta$, for example,
 %{1\over 12} + O(t/L^2)~.
 On the full manifold $C_\theta\times M_{D-2}$, there is an extra factor
 $V_{D-2}/(4\pi t)^{{D-2\over 2}}$ coming from the trivial Laplacian on the
-transverse space. Substituting this into Eq.\ref{heatent}, we get an
+transverse space. Substituting this into Eq.~\ref{heatent}, we get an
 expansion of the entropy in powers of $L^{-1}$:
 \begin{align}
 S & = {V_{D-2}\over(2\sqrt{\pi})^{D-2}}\int_{\epsilon^2}^\infty {dt\over
