--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,98 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-25 07:40:19 -0400 
+%% Created for Pete Su at 2023-08-25 07:51:19 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Wald2001,
+	author = {Robert M. Wald},
+	date-added = {2023-08-25 07:51:15 -0400},
+	date-modified = {2023-08-25 07:51:16 -0400},
+	doi = {10.12942/lrr-2001-6},
+	journal = {Living Rev. in Rel.},
+	note = {\href{http://arxiv.org/abs/gr-qc/9912119v2}{arxiv:gr-qc/9912119v2}},
+	number = {1},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {The Thermodynamics of Black Holes},
+	url = {https://doi.org/10.12942%2Flrr-2001-6},
+	volume = {4},
+	year = 2001,
+	bdsk-url-1 = {https://doi.org/10.12942%2Flrr-2001-6},
+	bdsk-url-2 = {https://doi.org/10.12942/lrr-2001-6}}
+
+@incollection{Wald2011,
+	author = {Robert M. Wald},
+	booktitle = {Einstein and the Changing Worldviews of Physics},
+	date-added = {2023-08-25 07:49:22 -0400},
+	date-modified = {2023-08-25 07:50:09 -0400},
+	doi = {10.1007/978-0-8176-4940-1_16},
+	note = {\href{https://arxiv.org/abs/gr-qc/0608018v1}{arxiv:gr-qc/0608018v1}},
+	pages = {317--331},
+	publisher = {Birkh\"{a}user Boston},
+	title = {The History and Present Status of Quantum Field Theory in Curved Spacetime},
+	url = {https://doi.org/10.1007%2F978-0-8176-4940-1_16},
+	year = 2011,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-0-8176-4940-1_16},
+	bdsk-url-2 = {https://doi.org/10.1007/978-0-8176-4940-1_16}}
+
+@article{Wald1975,
+	author = {Wald, Robert M},
+	date-added = {2023-08-25 07:47:36 -0400},
+	date-modified = {2023-08-25 07:47:37 -0400},
+	journal = {Communications in Mathematical Physics},
+	number = {1},
+	pages = {9--34},
+	publisher = {Springer},
+	title = {On particle creation by black holes},
+	volume = {45},
+	year = {1975}}
+
+@article{Wald1999,
+	author = {Robert M Wald},
+	date-added = {2023-08-25 07:47:12 -0400},
+	date-modified = {2023-08-25 07:47:14 -0400},
+	doi = {10.1088/0264-9381/16/12a/309},
+	journal = {Class. Quantum Grav.},
+	note = {\href{http://arxiv.org/abs/gr-qc/9901033v1}{arxiv:gr-qc/9901033v1}},
+	number = {12A},
+	pages = {A177--A190},
+	publisher = {{IOP} Publishing},
+	title = {Gravitation, thermodynamics and quantum theory},
+	url = {https://doi.org/10.1088%2F0264-9381%2F16%2F12a%2F309},
+	volume = {16},
+	year = 1999,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0264-9381%2F16%2F12a%2F309},
+	bdsk-url-2 = {https://doi.org/10.1088/0264-9381/16/12a/309}}
+
+@article{Visser2003,
+	author = {Matt Visser},
+	date-added = {2023-08-25 07:45:49 -0400},
+	date-modified = {2023-08-25 07:46:53 -0400},
+	doi = {10.1142/s0218271803003190},
+	journal = {Int. J. Mod. Phys. D},
+	note = {\href{http://arxiv.org/abs/hep-th/0106111v1}{arxiv:hep-th/0106111v1}},
+	number = {04},
+	pages = {649--661},
+	publisher = {World Scientific Pub Co Pte Lt},
+	title = {Essential and inessential features of {Hawking} radiation},
+	url = {https://doi.org/10.1142%2Fs0218271803003190},
+	volume = {12},
+	year = 2003,
+	bdsk-url-1 = {https://doi.org/10.1142%2Fs0218271803003190},
+	bdsk-url-2 = {https://doi.org/10.1142/s0218271803003190}}
+
+@article{Verlinde2013,
+	author = {Verlinde, Erik and Verlinde, Herman},
+	date-added = {2023-08-25 07:43:18 -0400},
+	date-modified = {2023-08-25 07:43:34 -0400},
+	journal = {arXiv preprint},
+	note = { arXiv:1306.0515},
+	title = {Passing through the firewall},
+	year = {2013}}
 
 @article{Verlinde2017,
 	author = {Erik P. Verlinde},
