--- a/1911.12333/replicas_draft.tex
+++ b/1911.12333/replicas_draft.tex
@@ -33,7 +33,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
