--- a/quant-ph-0506082/0506082-charter.tex
+++ b/quant-ph-0506082/0506082-charter.tex
@@ -27,7 +27,7 @@ bookmarksopenlevel=10
 \usepackage[charter,vvarbb,scaled=1.05]{newtxmath}
 \usepackage[cal=cm]{mathalfa}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \hbadness=2000
@@ -253,7 +253,7 @@ O}_\mathbf{A}} \newcommand{\PO}{T^*\mathsf{P}^{\mathcal O}}
 %
 % blackboard
 %
-\renewcommand{\C}{{\mathbb C}} \newcommand{\D}{{\mathbb D}}
+\newcommand{\C}{{\mathbb C}} \newcommand{\D}{{\mathbb D}}
 \newcommand{\BP}{{\mathbb P}} \newcommand{\I}{{\mathbb I}}
 \newcommand{\N}{{\mathbb N}} \newcommand{\R}{{\mathbb R}}
 \newcommand{\T}{{\mathbb T}} \newcommand{\Z}{{\mathbb Z}}
