--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-25 07:55:31 -0400 
+%% Created for Pete Su at 2023-08-26 07:04:04 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Pierce2012,
+	author = {Pierce, John R},
+	date-added = {2023-08-26 07:03:41 -0400},
+	date-modified = {2023-08-26 07:04:04 -0400},
+	publisher = {Dover},
+	title = {An introduction to information theory: symbols, signals and noise},
+	year = {1980}}
 
 @article{Wall2012,
 	author = {Aron C. Wall},
@@ -106,7 +114,7 @@
 	date-added = {2023-08-25 07:43:18 -0400},
 	date-modified = {2023-08-25 07:43:34 -0400},
 	journal = {arXiv preprint},
-	note = { arXiv:1306.0515},
+	note = {arXiv:1306.0515},
 	title = {Passing through the firewall},
 	year = {2013}}
 
