--- a/0709.0248/hmit.tex
+++ b/0709.0248/hmit.tex
@@ -2,27 +2,50 @@
 \usepackage{amssymb,amsthm,amsmath,prooftree,graphics}
 \usepackage[all]{xy}
 \usepackage[latin1]{inputenc}
-\usepackage[colorlinks=true
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,linktocpage=true]{hyperref}
+,linktocpage=true}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\hbadness=2000
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \input{diagxy}
 %%
