--- a/0707.2832/RMPZurek6.tex
+++ b/0707.2832/RMPZurek6.tex
@@ -3,7 +3,7 @@
 %\documentstyle[aps,preprint]{revtex}
 %\documentstyle[aps,prl,epsfig]{revtex}
 %%%%%\documentclass[aps,preprint,prl,epsfig]{revtex4}
-\documentclass[aps,rmp,epsfig,11pt]{revtex4}
+\documentclass[aps,rmp,floatfix,11pt]{revtex4}
 %!!\documentclass[aps,preprint,rmp,epsfig]{revtex4}
 %\documentstyle[aps,twocolumn,pra]{revtex}
 %\def\lsim{\mathrel{\raise2pt\hbox to 8pt{\raise -5pt\hbox{$\sim$}\hss{$<$}}}}
@@ -37,10 +37,13 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.8in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
+\pagestyle{plain}
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
 %#############################
 
@@ -119,7 +122,7 @@ bookmarksopenlevel=10
 %\newcommand{\Ei}{\ensuremath{\mathrm{Ei}}}
 \newcommand{\Si}{\ensuremath{\mathrm{Si}}}
 \newcommand{\Ci}{\ensuremath{\mathrm{Ci}}}
-\def\FCW{0.98\columnwidth}
+\def\FCW{4in}
 \def\HPW{0.48\textwidth}
 \def\TQPW{0.73\textwidth}
 \def\FPW{0.98\textwidth}
@@ -658,7 +661,7 @@ Player ignorant of the face value of cards in front of him (Fig. 1a) will be {\i
 and only one of the cards is favorable (e.g., a spade he needs to win). 
 
 
-\begin{figure*}[htb]
+\begin{figure*}[p]
 \begin{tabular}{l}
 \vspace{-0.15in} 
 \includegraphics[width=3.0in]{allcards.pdf}\\
@@ -1255,7 +1258,7 @@ either scattered (or emitted) by the printed page (or by the computer screen). W
 of various systems indirectly, because their correlations with $\cE$ (which we shall quantify below 
 using mutual information) allow $\cE$ to be a witness to the state of the system.
 
-\begin{figure}[htb]
+\begin{figure}[p]
 \begin{tabular}{l}
 \vspace{-0.15in} \includegraphics[width=4.0in]{EnvSubdivision.pdf}\\
 %\includegraphics[width=\FCW]{PIP2.pdf}\\
