--- a/1401.2026/wald.tex
+++ b/1401.2026/wald.tex
@@ -6,39 +6,53 @@
 %\documentclass{cambridge6A}
 \documentclass[12pt]{article}
 
-\usepackage[colorlinks=true
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\usepackage{amsmath,amssymb,amstext,amsthm,amscd}
+\usepackage{mathrsfs,eucal,bm,slashed}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,linktocpage=true]{hyperref}
+,linktocpage=true}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage{amsmath,amssymb,amstext,amsthm,amscd}
-\usepackage{mathrsfs,eucal,bm,slashed}
-\usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.1}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
-\usepackage[small]{titlesec}
-\usepackage[dotinlabels]{titletoc}
-\titlelabel{{\thetitle}.\quad}
 
-% different \sum and also fixes underbraces
-\input{../helpers/cmrsum}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
-% optional
-
-%\input{../helpers/revtex-12-fix.tex}
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %\usepackage{natbib}
 %\usepackage{rotating}
@@ -1418,10 +1432,11 @@ dependence on $U$ in the exponent can be traced back to the relationship $U = \e
 $u$ on the past horizon ${\mathcal H}^-$ of extended Schwarzschild spacetime (see \eqref{Uu}).
 The contribution of $f^T_+$ to
 \eqref{hawking} is given by
-\ben
-\lim_{T \to \infty} \omega( \phi[F_{\nu lm}^T]^* \phi[F^T_{\nu l m}] ) = \lim_{T \to \infty} \int
+\begin{multline}
+\lim_{T \to \infty} \omega( \phi[F_{\nu lm}^T]^* \phi[F^T_{\nu l m}] ) = \\
+\lim_{T \to \infty} \int
 W_2(x_1, x_2) f^{T}_+(U_1,V_1, {\bf x}_1)^* f^{T}_+(U_2, V_2, {\bf x}_2) \ dv_1 dv_2
-\een
+\end{multline}
 On the other hand assumption (2) implies that $f_-^T$ makes no contribution
  in the limit $T \to \infty$, either in its direct terms or its cross-terms
 with $f_+^T$.
