--- a/1611.02269/Dark_Gravity_November_8th.tex
+++ b/1611.02269/Dark_Gravity_November_8th.tex
@@ -19,17 +19,18 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum.tex}
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
 \usepackage{cite}
+\raggedbottom
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
@@ -39,19 +40,6 @@ bookmarksopenlevel=10
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
   
-
-\makeatletter
-\renewcommand\section{\@startsection {section}{1}{\z@}%
-                                   {-3.5ex \@plus -1ex \@minus -.2ex}%nn
-                                   {2.3ex \@plus.2ex}%
-                                   {\normalfont\large\bfseries}}
-
-
-\renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
-                                     {-3.25ex\@plus -1ex \@minus -.2ex}%
-                                     {1.5ex \@plus .2ex}%
-                                     {\normalfont\bfseries}}
-
 
 \renewcommand{\theequation}{\thesection.\arabic{equation}}
 
