--- a/1410.1540/diffprotocol_submit.tex
+++ b/1410.1540/diffprotocol_submit.tex
@@ -28,30 +28,53 @@
 \newcommand{\ra}{\rangle}
 \newcommand{\rb}{\right)}
 \newcommand{\lb}{\left(}
-%\makeatletter \@addtoreset{equation}{section}
-%\renewcommand{\theequation}{\thesection.\arabic{equation}}
 
-\makeatletter\renewcommand\section{\@startsection {section}{1}{\z@}%
-                                   {-3.5ex \@plus -1ex \@minus -.2ex}%nn
-                                   {2.3ex \@plus.2ex}%
-                                   {\normalfont\large\bfseries}}
-\renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
-                                     {-3.25ex\@plus -1ex \@minus -.2ex}%
-                                     {1.5ex \@plus .2ex}%
-                                     {\normalfont\bfseries}}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
-%\def\baselinestretch{1.2}
-\parskip 6 pt
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
 
- \marginparwidth 0pt
- \oddsidemargin  0pt
- \evensidemargin  0pt
- \marginparsep 0pt
- \topmargin   -0.25in
+\usepackage{cite}
+\usepackage{microtype}
 
- \textwidth   6.5in
- \textheight  9.0 in
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %macros here:
@@ -549,12 +572,13 @@ Requiring \eqref{eqn:seq-merging-error0} still leaves a great deal of freedom. I
 However, we will demonstrate that there is no advantage to be gained from all this freedom: greedy constrained merging is optimal.
 
 The definition in the case in which the protocol can generate entanglement requires replacing \eqref{eqn:seq-merging-error0} with
-\begin{equation} \label{eqn:seq-merging-error}
-\sum_k p_{k,x} \left\|
- \operatorname{id}_{[L,\ell(x+1))}^{B \rightarrow A} \sigma^{(k,x)}_{[L,\ell(x+1))^{BA'B'} \cup (r(x),R]^A \cup (I^c)^A } -  \proj{\psi}_{\mathbb{Z} \setminus [\ell(x+1),r(x)]^A}
+\begin{multline} \label{eqn:seq-merging-error}
+\sum_k p_{k,x} \biggl\|
+ \operatorname{id}_{[L,\ell(x+1))}^{B \rightarrow A} \sigma^{(k,x)}_{[L,\ell(x+1))^{BA'B'} \cup (r(x),R]^A \cup (I^c)^A } -  \\
+ \proj{\psi}_{\mathbb{Z} \setminus [\ell(x+1),r(x)]^A}
  					\otimes \proj{\Phi}_{[L,\ell(x+1))^{A'B'}}
-\right\|_1 \leq \epsilon.
-\end{equation}
+\biggr\|_1 \leq \epsilon.
+\end{multline}
 Here, $\ket{\Phi}_{[L,\ell(x+1))^{A'B'}}$ is a product over $x \in [L,\ell(x+1))$ of maximally entangled states $\sum_{j=1}^{F_x} \ket{jj}_{A'B'}$. Thus, once the protocol has forever finished acting on some sites, the $A'B'$ portion of each of those sites must be left with high fidelity maximally entangled states of Schmidt rank $F_x$.
 \begin{theorem}
 For any $E$-ebit constrained merging protocol with sequential merging error $\epsilon < 1/4$, the following inequality holds for every initial state $\ket{\psi}$:
